--- a/web/package.json
+++ b/web/package.json
@@ -74,7 +74,7 @@
     "eject": "react-scripts eject",
     "lint:fix": "eslint ./src/** --fix",
     "lint": "eslint ./src/**",
-    "build:prod": "react-app-rewired build --prod",
+    "build:prod": "react-app-rewired build --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
