--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@date-io/core": "^1.3.6",
     "@date-io/moment": "1.x",
-    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@hot-loader/react-dom": "^16.12.0",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
@@ -19,7 +19,6 @@
     "axios": "^0.19.2",
     "caniuse-lite": "^1.0.30001181",
     "classnames": "^2.2.6",
-    "font-awesome": "^4.7.0",
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
     "formik-material-ui-pickers": "^0.0.8",
@@ -31,6 +30,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-syntax-highlighter": "^15.4.3",
     "yup": "^0.28.3"
   },
   "devDependencies": {
